--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,11 +9,12 @@
     margin: 0;
     box-sizing: border-box;
 }
-.Container{
+.container{
     margin: auto; 
-    width:80%;
+    width:90%;
     
 }
+
 .navbar a{
     color: var(--primary);
     font-weight: 500;
@@ -22,33 +23,57 @@
     position: fixed ;
     z-index: 111111;
     width: 100%;
+    padding: 20px;
 }
 
 a.navbar-brand{
     color: var(--primary2);
     font-weight: bolder;
     font-family: var(--font);
+    font-size: 20px;
 }
 
-.btn-outline-success{
-    color: var(--primary);
-    font-weight: 500;
-    border-color: var(--primary);
-}
-.btn-outline-success:hover{
-    background-color:unset;
-    border-color: black;
-    color: black;
-}
-/* .carousel-inner{
-    height:90vh;
 
-} */
 .carousel-inner img{
-    height: 100vh;
+    height: 90vh;
     width: 100%;
 }
 .headerContent{
-    margin-top: 500px;
+    position: absolute;
+    top:30%;
+    left: 20%;
+    z-index: 2;
+    max-width: 1000px;
+    color: var(--primary2);
+    backdrop-filter: blur(10px);
+        font-family: var(--font);
+
 }
+.carousel-inner{
+  position: relative;
+}
+.headerContent h1{
+    padding-bottom: 40px !important;
+    font-weight: bolder;
+    font-size: 50px;
+}
+.headerContent h2{
+    color: var(--primary);
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+button{
+    font-size: 20px !important;
+    color: var(--primary2) !important;
+    border:2px solid var(--primary2) !important;
+   
+}
+button:hover{
+    border-color: var(--primary) !important;
+    color:var(--primary) !important;
+    background-color:unset !important;
+
+
+}
+
 
