--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,23 @@
     margin: 0;
     box-sizing: border-box;
 }
+html{
+    position: relative;
+}
+.announce{
+   text-align: center;
+   background-color: rgb(1, 1, 51);
+   color: white;
+   padding: 5px 0px;
+   position: fixed;
+   top: 0px;
+    z-index: 1100;
+    width: 100%;
+}
+.announce a{
+    color: white;
+    text-decoration: underline;
+}
 .container{
     margin: auto; 
     width:90%;
@@ -21,9 +38,11 @@
 }
 .navbar{
     position: fixed ;
-    z-index: 111111;
+    z-index: 1000;
     width: 100%;
-    padding: 20px;
+    padding: 20px 10px;
+    top: 50px;
+    
 }
 
 a.navbar-brand{
@@ -39,15 +58,19 @@ a.navbar-brand{
     width: 100%;
 }
 .headerContent{
-    position: absolute;
-    top:30%;
-    left: 20%;
-    z-index: 2;
-    max-width: 1000px;
-    color: var(--primary2);
-    backdrop-filter: blur(10px);
+        position: absolute;
+        top:12%;
+        left: 20%;
+        z-index: 2;
+        max-width: 1000px;
+        color: var(--primary2);
+        backdrop-filter: blur(10px);
         font-family: var(--font);
-
+        border-radius:22px ;
+        -webkit-border-radius:22px ;
+        -moz-border-radius:22px ;
+        -ms-border-radius:22px ;
+        -o-border-radius:22px ;
 }
 .carousel-inner{
   position: relative;
@@ -56,11 +79,13 @@ a.navbar-brand{
     padding-bottom: 40px !important;
     font-weight: bolder;
     font-size: 50px;
+  
 }
 .headerContent h2{
     color: var(--primary);
     font-size: 30px;
     margin-bottom: 30px;
+   
 }
 button{
     font-size: 20px !important;
@@ -73,6 +98,216 @@ button:hover{
     color:var(--primary) !important;
     background-color:unset !important;
 
+}
+.card{
+    border: unset !important;
+}
+h2{
+    font-size: 50px ;
+    margin-top: 40px;
+    margin-bottom: 60px;
+    color: var(--primary2);
+    font-weight: 600;
+}
+ .section1 p{
+    text-align: center;
+    font-size: 20px;
+    color: var(--primary);
+    font-weight: 500;
+    font-family: var(--font);
+}
+
+ h2 i{
+        color: var(--primary) !important;
+
+ }
+ .card{
+    max-width: 250px;
+    padding:5px;
+    transition:all 400ms 10ms ;
+    -webkit-transition:all 400ms 10ms ;
+    -moz-transition:all 400ms 10ms ;
+    -ms-transition:all 400ms 10ms ;
+    -o-transition:all 400ms 10ms ;
+    
+}
+.card img {
+    min-height: 370px;
+    max-height: 370px;
+    border-radius: 22px;
+    -webkit-border-radius: 22px;
+    -moz-border-radius: 22px;
+    -ms-border-radius: 22px;
+    -o-border-radius: 22px;
+}
+ .card:hover{
+    transform: translatey(-10px);
+    -webkit-transform: translatey(-10px);
+    -moz-transform: translatey(-10px);
+    -ms-transform: translatey(-10px);
+    -o-transform: translatey(-10px);
+    padding:0px ;
+}
+.card:hover p{
+    color: var(--primary2);
+    font-weight: bolder;
+    
+}
+a{
+    text-decoration: none;
+}
+.imgFooter{
+    margin-top: 20px;
+    border-radius: 22px;
+    -webkit-border-radius: 22px;
+    -moz-border-radius: 22px;
+    -ms-border-radius: 22px;
+    -o-border-radius: 22px;
+    margin-bottom: 30px;
+    max-width: 100px;
+    max-height: 100px;
+    box-shadow: none;
+      transition: all 0.4s ease-in-out 1ms ;
+    -webkit-transition: all 0.4s ease-in-out 1ms ;
+    -moz-transition: all 0.4s ease-in-out 1ms ;
+    -ms-transition: all 0.4s ease-in-out 1ms ;
+    -o-transition: all 0.4s ease-in-out 1ms ;
+}
+.imgFooter:hover{
+    box-shadow:  2px 0px 9px var(--primary) ;
+    transform: translatey(5px);
+    -webkit-transform: translatey(5px);
+    -moz-transform: translatey(5px);
+    -ms-transform: translatey(5px);
+    -o-transform: translatey(5px);
+}
+.imgFooter img{
+    width: 100%;
+    height: 100%;
+    border-radius: 22px;
+    -webkit-border-radius: 22px;
+    -moz-border-radius: 22px;
+    -ms-border-radius: 22px;
+    -o-border-radius: 22px;
+    
+}
+footer{
+    height: auto;
+    padding: 20px 0px;
+
+}
+
+footer p{
+    text-align: start;
+    font-size: 15px;
+    font-weight: 600;
+margin-bottom: 150px;
+color: var(--primary);
+}
+footer i{
+    color: var(--primary);
+    padding-right: 25px;
+    font-size: 25px;
+     transition: all 0.4s ease-in-out 1ms ;
+    -webkit-transition: all 0.4s ease-in-out 1ms ;
+    -moz-transition: all 0.4s ease-in-out 1ms ;
+    -ms-transition: all 0.4s ease-in-out 1ms ;
+    -o-transition: all 0.4s ease-in-out 1ms ;
+}
+footer i:hover{
+font-size: 20px;
+    color:var(--primary2) ;
+}
+footer ul{
+    margin: 0px !important;
+    padding: 0px;
+}
+ footer ul li{
+    list-style-type: none;
+    margin-bottom: 20px;
+}
+footer ul p{
+    margin-bottom: 30px;
+    color: black;
+    font-weight: bold;
+    font-size: 18px;
+   
+}
+footer li a {
+    color: var(--primary);
+    font-size: 17px;
+    font-weight: bold;
+    transition: all 0.4s ease-in-out 1ms ;
+    -webkit-transition: all 0.4s ease-in-out 1ms ;
+    -moz-transition: all 0.4s ease-in-out 1ms ;
+    -ms-transition: all 0.4s ease-in-out 1ms ;
+    -o-transition: all 0.4s ease-in-out 1ms ;
+    
+}
+footer li a:hover{
+    color: var(--primary2);
+    font-size: 18px;
+    text-shadow: 1px 0px 10px var(--primary);
+} 
+footer label{
+       text-align: start;
+    font-size: 25px;
+    font-weight: 600;
+color: var(--primary);
+margin-bottom: 20px;
+}
+footer div.col-lg-3,footer div.col-lg-2{
+    margin-top: 60px !important;
+}
+input[type="email"]{
+    border: 2px solid var(--primary);
+    padding: 10px 70px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+input[type="email"]:focus{
+border-color: var(--primary2);
+outline: none;
+}
+
+footer ul li span:hover{
+    transform: translateY(5px);
+    -webkit-transform: translateY(5px);
+    -moz-transform: translateY(5px);
+    -ms-transform: translateY(5px);
+    -o-transform: translateY(5px);
+}
+input[type="submit"]{
+    padding:5px 20px ;
+    color: var(--primary2);
+    font-size: 15px;
+    font-weight: bolder;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+    border: var(--primary2) solid 3px;
+    box-shadow: none;
+    margin-top: 10px;
+    transition: all 0.4s ease-in-out 1ms ;
+    -webkit-transition: all 0.4s ease-in-out 1ms ;
+    -moz-transition: all 0.4s ease-in-out 1ms ;
+    -ms-transition: all 0.4s ease-in-out 1ms ;
+    -o-transition: all 0.4s ease-in-out 1ms ;
+}
+input[type="submit"]:hover{
+    font-size: 20px;
+    padding: 5px 25px;
+}
+.copyRight{
+    text-align: center;
+    font-size: 15px;
+    font-weight: 700;
+    margin-top: 20px;
 
 }
 
