--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,8 +59,8 @@ a.navbar-brand{
 }
 .headerContent{
         position: absolute;
-        top:12%;
-        left: 20%;
+        top:9%;
+        left: 18%;
         z-index: 2;
         max-width: 1000px;
         color: var(--primary2);
@@ -122,7 +122,7 @@ h2{
 
  }
  .card{
-    max-width: 250px;
+
     padding:5px;
     transition:all 400ms 10ms ;
     -webkit-transition:all 400ms 10ms ;
@@ -132,8 +132,8 @@ h2{
     
 }
 .card img {
-    min-height: 370px;
-    max-height: 370px;
+    width: 100%;
+    height: 300px;
     border-radius: 22px;
     -webkit-border-radius: 22px;
     -moz-border-radius: 22px;
@@ -309,6 +309,25 @@ input[type="submit"]:hover{
     font-weight: 700;
     margin-top: 20px;
 
+}
+.section2{
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+.section2 h2{
+    max-width: 500px;
+    font-size: 40px;
+  margin-bottom: 13px;  
+    font-family: var(--font);
+    font-weight: lighter;
+}
+.section2 p{
+    color: var(--primary);
+    font-weight: 600;
+    font-size: 20px;
+}
+video{
+    width: 100%;
 }
 
 
