--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -14,20 +14,18 @@
    }
 }
 @media screen and (max-width: 995px){
-
-
 .about h2,.about2 h2{
     margin-top: 7%;
-}}
-@media screen and (max-width: 560px){
-    .navbar{
-        position: fixed;
-        top: 74px;
-    }
+}
+header.Birthday .container h2{
+    font-size: 80px;
+}
+header.Birthday .container h2:hover{
+    font-size: 90px;
+}
 }
 @media screen and (max-width: 772px){
    .card img,.card{
-   
         width: 100% ;
     }
     
@@ -54,7 +52,43 @@
     .section2 h2{
         font-size: 30px;
     }
+ header.Birthday .container h2{
+    font-size: 60px;
+}
+header.Birthday .container h2:hover{
+    font-size: 70px;
+}
 
+}
+@media screen and (max-width: 800px){
+    header.Birthday .container h2{
+        font-size: 40px ;
+        padding-top: 40%;
+        padding-left: 15%;
+    }
+    header.Birthday .container h2:hover{
+    font-size: 50px;
+}}
+@media screen and (max-width: 560px){
+    .navbar{
+        position: fixed;
+        top: 74px;
+    }
+     header.Birthday .container h2{
+        padding-top: 50%;
+        padding-left: 15%;
+    }
+     
+}
+@media screen and (max-width: 445px){
+     header.Birthday .container h2{
+        font-size: 40px ;
+        padding-top: 70%;
+        padding-left: 15%;
+    }
+    header.Birthday .container h2:hover{
+    font-size: 50px;
+}
 }
 @media screen and (max-width: 380px){
     input[type="email"]{
