--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,10 +1,20 @@
+@media screen and (max-width: 1385px){
+.card{
+    min-width: 270px !important;
+}
+}
 @media screen and (max-width: 1366px){
-input[type="email"],input[type="submit"]{
+footer input[type="email"],input[type="submit"]{
     padding: 10px 30px;
 }
+
 }
+
 @media screen and (max-width: 1166px){
-  
+  header.Birthday{
+    height: auto;
+  }
+ 
    footer p{
     margin-bottom: 50px;
    }
@@ -23,6 +33,9 @@ input[type="email"],input[type="submit"]{
     }
     
    }
+   .Birthday{
+    padding-bottom: 60px;
+   }
 }
 @media screen and (max-width: 995px){
     .navContent div{
@@ -31,12 +44,37 @@ input[type="email"],input[type="submit"]{
 .about h2,.about2 h2{
     margin-top: 7%;
 }
+
 header.Birthday .container h2{
     font-size: 80px;
 }
+
 header.Birthday .container h2:hover{
     font-size: 90px;
 }
+}
+@media screen and (max-width: 800px){
+    header.Birthday .container h2{
+        font-size: 70px ;
+        padding-top: 40%;
+        padding-left: 15%;
+    }
+    header.Birthday .container h2:hover{
+    font-size: 50px;
+}}
+@media screen and (max-width: 560px){
+    .navbar{
+        position: fixed;
+        top: 74px;
+    }
+     header.Birthday .container h2{
+        padding-top: 50%;
+        padding-left: 15%;
+    }
+    header.Birthday .container .advanceFont{
+    font-size: 80px !important;
+}
+     
 }
 @media screen and (max-width: 772px){
    .card img,.card{
@@ -70,30 +108,13 @@ header.Birthday .container h2:hover{
     font-size: 60px;
 }
 header.Birthday .container h2:hover{
-    font-size: 70px;
+    font-size: 62px;
+}
+   header.Birthday .container .advanceFont{
+    font-size: 80px !important;
+}
 }
 
-}
-@media screen and (max-width: 800px){
-    header.Birthday .container h2{
-        font-size: 40px ;
-        padding-top: 40%;
-        padding-left: 15%;
-    }
-    header.Birthday .container h2:hover{
-    font-size: 50px;
-}}
-@media screen and (max-width: 560px){
-    .navbar{
-        position: fixed;
-        top: 74px;
-    }
-     header.Birthday .container h2{
-        padding-top: 50%;
-        padding-left: 15%;
-    }
-     
-}
 @media screen and (max-width: 445px){
      header.Birthday .container h2{
         font-size: 40px ;
@@ -106,6 +127,9 @@ header.Birthday .container h2:hover{
 input[type="email"],input[type="password"],input[type="text"],input[type="submit"]{
     padding: 10px 40px;
 }
+.aboutContent h2{
+    font-size: 40px;
+}
 }
 @media screen and (max-width: 395px){
 input[type="email"],input[type="password"],input[type="text"],input[type="submit"]{
@@ -116,9 +140,12 @@ input[type="email"],input[type="password"],input[type="text"],input[type="submit
    input[type="email"], input[type="password"],input[type="text"],input[type="submit"]{
     padding: 10px 20px;
 }
+   header.Birthday .container .advanceFont{
+    font-size: 60px !important;
+}
 }
 @media screen and (max-width: 340px){
-    input[type="email"]{
+   footer input[type="email"]{
         padding: 5px 30px;
     }
    .carousel-inner img{
@@ -130,4 +157,19 @@ input[type="email"],input[type="password"],input[type="text"],input[type="submit
    .headerContent p{
     font-size: 20px;
    }
+   header.Birthday .container h2{
+    font-size: 30px;
+    padding-top: 190px !important;
+}
+.announce{
+    font-size: 16px;
+}
+}
+@media screen and (max-width: 290px){
+   header.Birthday .container .advanceFont{
+    font-size: 40px !important;
+}
+.announce{
+    font-size: 13px;
+}
 }
