--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,9 +29,10 @@ html{
 }
 .container{
     margin: auto; 
-    width:90%;
+    width:95%;
     
 }
+
 
 .navbar a{
     color: var(--primary);
@@ -92,9 +93,6 @@ a.navbar-brand{
     margin-bottom: 30px;
    
 }
-.card{
-    border: unset !important;
-}
 h2{
     font-size: 50px ;
     margin-top:40px;
@@ -118,7 +116,8 @@ h2{
 
  }
  .card{
-    min-width: 390px;
+    border: unset !important;
+    min-width: 350px;
     padding:5px;
     transition:all 400ms 10ms ;
     -webkit-transition:all 400ms 10ms ;
@@ -129,7 +128,6 @@ h2{
 }
 .card img {
     width: 100%;
-    
     height: 500px;
     border-radius: 22px;
     -webkit-border-radius: 22px;
@@ -493,10 +491,17 @@ header.Birthday .container h2:hover{
     font-size: 7rem;
 }
 header.Birthday .container p{
+    backdrop-filter: blur(5px);
+    padding: 10px 20px;
+    border-radius: 12px;
     color: var(--primary);
     text-align: center;
     font-weight: bold;
     font-size: 20px;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    -ms-border-radius: 12px;
+    -o-border-radius: 12px;
 }
 /* .........................>>categories........................................ */
 .categories{
@@ -511,11 +516,11 @@ header.Birthday .container p{
     color: var(--primary2) !important;
     font-weight: 600 !important;
 }
-.categories p{
+.categories p,select{
     color: var(--primary2) !important;
     font-weight: 600 !important;
-    border: 1px solid var(--primary2);
-    padding: 5px 0px;
+    border: 2px solid var(--primary2) !important;
+    padding: 10px 0px !important;
   text-align: center;
     border-radius:5px ;
     -webkit-border-radius:5px ;
@@ -527,13 +532,12 @@ header.Birthday .container p{
     -moz-transition: all 0.4s ease-in-out 1ms ;
     -ms-transition: all 0.4s ease-in-out 1ms ;
     -o-transition: all 0.4s ease-in-out 1ms ;
+    box-shadow: 1px 1px 10px var(--primary) !important;
 }
-.categories p:hover{
+.categories p:hover,select:hover{
     color: var(--primary) !important;
     border:2px solid var(--primary);
-    font-size: 25pxpx;
-    padding: 7px 0px;
-    box-shadow:2px 2px 10px var(--primary2)
+    font-size:17px;
 }
 .cards .card p{
     text-align: center;
@@ -674,3 +678,4 @@ input{
     display: block;
     margin: auto;
 }
+/* ..............................................................select.................................... */
