--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -682,52 +682,8 @@ input{
     margin: auto;
 }
 /* ..............................................................cart page.................................... */
- /* body {
-      font-family: var(--font), cursive;
-      background-color: #f8f9fa;
-      color: var(--primary);
-      padding-top: 140px; /* لتجنب الـ navbar المثبت 
-    }
 
-    h2 {
-      color: var(--primary2);
-      font-weight: 700;
-      margin-bottom: 30px;
-      text-align: center;
-    }
 
-    table th {
-      color: var(--primary2);
-      font-weight: 700;
-    }
-
-    .btn-remove {
-      color: var(--primary);
-      background: transparent;
-      border: none;
-      font-size: 1.3rem;
-      transition: color 0.3s;
-    }
-
-    .btn-remove:hover {
-      color: var(--primary2);
-      cursor: pointer;
-    }
-
-    .cart-summary {
-      font-weight: 700;
-      font-size: 1.25rem;
-      color: var(--primary2);
-      text-align: right;
-      margin-top: 20px;
-    }
-
-    .empty-cart {
-      text-align: center;
-      font-size: 1.3rem;
-      color: var(--primary);
-      margin-top: 50px;
-    } */
 /* ...................................................delivery page */
 .Delivery label{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -758,3 +714,5 @@ input{
 .Delivery textarea{
     border: 2px solid var(--primary);
 }
+
+/* ............................................ */
