--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -716,3 +716,29 @@ input{
 }
 
 /* ............................................ */
+#loading {
+  position: fixed;
+  inset: 0;
+  background-color: white;
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#loading p {
+  margin-top: 10px;
+  font-weight: bold;
+  color: #007bff;
+}
+#loading .spinner{
+   width: 100%; 
+   height: 100%;
+}
+#loading p{
+    color: var(--primary);
+}
+#loading #main-content{
+    display:none;
+}
